<resources>
    <string name="app_name">WhatsappX</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_cadastro">Cadastrar</string>
    <string name="descricao_conteudo">Whatsappx Logo</string>
    <string name="texto_login">Criar uma conta</string>
    <string name="botão_entrar">Entrar</string>
    <string name="descricao_cadastro">Homem acenando</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sair">Sair</string>
    <string name="cadastro_bemvindo">Bem vindo(a)!</string>
    <string name="config_nome_do_usuario">Nome do usuário</string>
    <string name="config_aviso">Esse não é seu nome de usuário nem sua senha. Esse nome será visivel para seus contatos do WhatsappX</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for Sign -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastro_aviso_campos">Por favor preencha todos os campos corretamente!</string>
    <string name="cadastro_sucesso">Sucesso ao cadastrar usuário!</string>
    <string name="cadastro_fracasso_senha_fraca">Tente uma senha mais forte!</string>
    <string name="cadastro_fracasso_email">Por favor, digite um e-mail adequado</string>
    <string name="cadastro_fracasso_conta_existente">Esta conta já foi cadastrada</string>
    <string name="cadastro_fracasso">"Não foi possivel cadastrar por causa de: "</string>

</resources>